added our story section

--- a/index.html
+++ b/index.html
@@ -82,9 +82,24 @@
 	    <span class="sr-only">Next</span>
 	  </a>
 	</div>
-
 	<!-- carousel section ends -->
-
+	<!-- our steory section starts -->
+	<div class="container" id="our-story">
+		<div class="row">
+			<div class="col-md-6">
+				<h1 class="lobster-text orange-text">Our Story</h1>
+				<h3 class="raleway-text">One Man. One Dream</h3>
+			</div> <!-- col-md-6 ends -->
+			<div class="col-md-6">
+				<h1 id="year-text">1989</h1>
+				<p class="raleway-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit fugit consequatur, fugiat rerum at sapiente! Aspernatur repellendus, maiores porro doloremque doloribus! Sint aliquam reiciendis voluptatem accusantium reprehenderit atque placeat error.</p>
+				<p class="raleway-text text-justify">Ex laboriosam dolor voluptatem maxime quaerat aliquid in, rem eius. Sunt, iure, eveniet! Sunt ipsam, natus quis officia iure consectetur placeat fugiat qui. Illo numquam illum, natus corrupti amet aperiam.</p>
+				<p class="raleway-text text-justify">Repellat, amet magni dolores repellendus vitae magnam molestias ipsam libero eum commodi incidunt deleniti iusto ea quod obcaecati id. Ex facilis vel exercitationem, error libero cupiditate ullam nisi illo quo.</p>
+				<p class="raleway-text text-justify">Quod atque quasi voluptate magnam laudantium molestiae? At tempore minus, blanditiis nam qui perspiciatis nemo laborum doloribus nihil est amet aliquid recusandae velit, consequatur voluptatum eligendi odit accusantium eaque. Ad?</p>
+			</div> <!-- col-md-6 ends -->
+		</div> <!-- row ends -->
+	</div> <!-- container ends -->
+	<!-- our steory section ends -->
 	<!-- javascript	 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
