added the review section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,19 @@
 			</div> <!-- col-md-6 ends -->
 		</div> <!-- row ends -->
 	</div> <!-- container ends -->
-	<!-- our steory section ends -->
+	<!-- our story section ends -->
+	<!-- review section starts -->
+	<div class="container-fluid" id="review">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2 text-center" id="review-background">
+					<h3 class= "lobster-text orange-text">Fresno Bee</h3>
+					<p class="raleway-text white-text">The freshest and bestest ingredients come together to make some of the best food I have ever ate. You can really taste the Central valley in every bite.</p>
+			</div>
+		</div>
+	</div>
+	<!-- review section starts -->
+
+
 	<!-- javascript	 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
