added the menu section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 	      	<img src="img/name-01.png" alt="Header Logo" class="img-responsive">
 	      </a>
 	    </div>
-
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
@@ -38,7 +37,6 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 	<!-- navbar ends -->
-
 	<!-- carousel section begins -->
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -47,8 +45,6 @@
 	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
 	  </ol>
-
-
 	  <!-- Wrapper for slides -->
 	  <div class="carousel-inner" role="listbox">
 	    <div class="item active" id="wood-background">
@@ -59,7 +55,6 @@
 	        <h3>Eat Local.</h3>
 	        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dolorem quibusdam, aspernatur ex, porro maiores ipsum explicabo impedit totam cum repellendus? Quis, excepturi, esse.</p>
 					<button type="button" class="btn btn-default btn-lg">Browse Gallery</button>
-
 	      </div>
 	    </div> <!-- Second slide ends -->
 			<div class="item" id="farm-background"> <!-- Third slide begins -->
@@ -67,11 +62,9 @@
 	        <h3>From Farm to Table.</h3>
 	        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium itaque quidem consequatur provident saepe consequuntur, adipisci, enim dolorum voluptate. Inventore laborum perspiciatis, quia non!</p>
 					<button type="button" class="btn btn-default  btn-lg">Browse Gallery</button>
-
 	      </div>
 	    </div> <!-- Third slide ends -->
 	  </div>
-
 	  <!-- Controls -->
 	  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
 	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -110,8 +103,122 @@
 		</div>
 	</div>
 	<!-- review section starts -->
-
-
+	<!-- menu section stats -->
+	<div class="container-fluid" id="menu-section">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h1 class="lobster-text white-text text-center">Menu</h1>
+				<div>
+  <!-- Nav tabs -->
+  			<ul class="nav nav-tabs nav-justified" role="tablist">
+    			<li role="presentation" class="active"><a href="#appetizer" aria-controls="appetizer" role="tab" data-toggle="tab">appetizer</a></li>
+    			<li role="presentation"><a href="#lunch" aria-controls="lunch" role="tab" data-toggle="tab">lunch</a></li>
+    			<li role="presentation"><a href="#dinner" aria-controls="dinner" role="tab" data-toggle="tab">dinner</a></li>
+    			<li role="presentation"><a href="#dessert" aria-controls="dessert" role="tab" data-toggle="tab">dessert</a></li>
+  			</ul>
+  <!-- Tab panes -->
+  			<div class="tab-content">
+					<!-- appetizer menu section begins -->
+    				<div role="tabpanel" class="tab-pane active fade in" id="appetizer">
+  						<div class="col-sm-6 col-md-3 food-item">
+      					<img src="img/dip.jpg" alt="Artichoke Dip" class="img-responsive img-thumbnail">
+								<h3 class="text-center">Appetizer 1</h3>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+  						</div>
+						<div class="col-sm-6 col-md-3 food-item">
+							<img src="img/eggplant.jpg" alt="Eggplant" class="img-responsive img-thumbnail">
+							<h3 class="text-center">Appetizer 2</h3>
+							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+						</div>
+						<div class="col-sm-6 col-md-3 food-item">
+							<img src="img/meat.jpg" alt="Prime Rib" class="img-responsive img-thumbnail">
+							<h3 class="text-center">Appetizer 3</h3>
+							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+						</div>
+						<div class="col-sm-6 col-md-3 food-item">
+							<img src="img/bruschetta.jpg" alt="Bruschetta" class="img-responsive img-thumbnail">
+							<h3 class="text-center">Appetizer 4</h3>
+							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+						</div>
+					</div>
+					<!-- appetizer section menu ends -->
+					<!-- lunch section menu starts -->
+    				<div role="tabpanel" class="tab-pane fade" id="lunch">
+  						<div class="col-sm-6 col-md-3 food-item">
+      					<img src="img/dip.jpg" alt="Artichoke Dip" class="img-responsive img-thumbnail">
+								<h3 class="text-center">Lunch 1</h3>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+  						</div>
+						<div class="col-sm-6 col-md-3 food-item">
+							<img src="img/eggplant.jpg" alt="Eggplant" class="img-responsive img-thumbnail">
+							<h3 class="text-center">Lunch 2</h3>
+							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+						</div>
+						<div class="col-sm-6 col-md-3 food-item">
+							<img src="img/meat.jpg" alt="Prime Rib" class="img-responsive img-thumbnail">
+							<h3 class="text-center">Lunch 3</h3>
+							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+						</div>
+						<div class="col-sm-6 col-md-3 food-item">
+							<img src="img/bruschetta.jpg" alt="Bruschetta" class="img-responsive img-thumbnail">
+							<h3 class="text-center">Lunch 4</h3>
+							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+						</div>
+					</div>
+					<!-- lunch section menu ends -->
+    			<!-- Dinner section menu starts -->
+	    				<div role="tabpanel" class="tab-pane fade" id="dinner">
+	  						<div class="col-sm-6 col-md-3 food-item">
+	      					<img src="img/dip.jpg" alt="Artichoke Dip" class="img-responsive img-thumbnail">
+									<h3 class="text-center">Dinner 1</h3>
+									<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+	  						</div>
+							<div class="col-sm-6 col-md-3 food-item">
+								<img src="img/eggplant.jpg" alt="Eggplant" class="img-responsive img-thumbnail">
+								<h3 class="text-center">Dinner 2</h3>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+							</div>
+							<div class="col-sm-6 col-md-3 food-item">
+								<img src="img/meat.jpg" alt="Prime Rib" class="img-responsive img-thumbnail">
+								<h3 class="text-center">Dinner 3</h3>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+							</div>
+							<div class="col-sm-6 col-md-3 food-item">
+								<img src="img/bruschetta.jpg" alt="Bruschetta" class="img-responsive img-thumbnail">
+								<h3 class="text-center">Dinner 4</h3>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+							</div>
+						</div>
+					<!-- Dinner section menu ends -->
+					<!-- Dessert section menu starts -->
+						<div role="tabpanel" class="tab-pane fade" id="dessert">
+							<div class="col-sm-6 col-md-3 food-item">
+								<img src="img/dip.jpg" alt="Artichoke Dip" class="img-responsive img-thumbnail">
+								<h3 class="text-center">Dessert 1</h3>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+							</div>
+						<div class="col-sm-6 col-md-3 food-item">
+							<img src="img/eggplant.jpg" alt="Eggplant" class="img-responsive img-thumbnail">
+							<h3 class="text-center">Dessert 2</h3>
+							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+						</div>
+						<div class="col-sm-6 col-md-3 food-item">
+							<img src="img/meat.jpg" alt="Prime Rib" class="img-responsive img-thumbnail">
+							<h3 class="text-center">Dessert 3</h3>
+							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+						</div>
+						<div class="col-sm-6 col-md-3 food-item">
+							<img src="img/bruschetta.jpg" alt="Bruschetta" class="img-responsive img-thumbnail">
+							<h3 class="text-center">Dessert 4</h3>
+							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aspernatur debitis quam saepe possimus quas quo molestias, est alias praesentium blanditiis accusamus dolorum numquam, minus voluptates ipsum, ipsa eveniet quaerat! Nostrum.</p>
+						</div>
+						</div><!-- Dessert section menu ends -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- menue section ends	 -->
 	<!-- javascript	 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
